# SevenTools

./: CMakeLists.txt  LICENSE  README.md
Docs/: index.md
Docs/Macros/Header/: CompilerNames.md  CppVersions.md  SymbolVisibility.md  SystemNames.md
Docs/Threads/: ThreadPool.md
Docs/Threads/Header/: ThreadPool.md
Docs/Threads/ThreadPool/: ThreadPool.md  addTask.md  ~ThreadPool.md
Docs/Utility/: BasicStringView.md  Fraction.md  IntegerSequence.md  OperationStream.md
Docs/Utility/BasicStringView/: BasicStringView.md  at.md  back.md  begin.md  compare.md  contains.md  data.md  empty.md  end.md  endsWith.md  find.md  findFirstNotOf.md  findFirstOf.md  findLastNotOf.md  findLastOf.md  front.md  length.md  maxSize.md  operator=.md  operator[].md  operator_cmp.md  rfind.md  startsWith.md  subStr.md  swap.md
Docs/Utility/Fraction/: Fraction.md  getDenominator.md  getNumerator.md  getValue.md  operator=.md  operator_T.md  operator_arith.md  operator_arith2.md  operator_arith3.md  operator_cmp.md  reciprocal.md  setDenominator.md  setNumerator.md  swap.md  swap2.md
Docs/Utility/Header/: Fraction.md  IntegerSequence.md  OperationStream.md  StringView.md
Docs/Utility/IntegerSequence/: size.md
Docs/Utility/OperationStream/: OperationStream.md  add.md  addOperation.md  clear.md  empty.md  (+6 more)
Macros/: CMakeLists.txt  CompilerNames.h  CppVersions.h  SymbolVisibility.h  SystemNames.h
Threads/: CMakeLists.txt  ThreadPool.h
Utility/: CMakeLists.txt  Fraction.h  IntegerSequence.h  MetaUtils.h  OperationStream.h  StringView.h  Variant.h
cmake/: SevenToolsConfig.cmake.in
